# scrub-mcp

./: .gitignore  .mcp.json  .mcp.json.example  .pre-commit-hooks.yaml  AGENTS.md  MCP-TOOLS.md  MCP-TOOLS.mds  QUICKSTART.md  README.md  action.yml  config.yaml  pyproject.toml  sbom.cyclonedx.json
.github/workflows/: publish.yml
samples/: judge_calibration.json  sample_messy.json  sample_messy.py
scripts/: gen_examples.py
src/scrub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scrub_mcp/: cli.py  config.py  models.py  pipeline.py  utils.py
src/scrub_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scrub_mcp/examples/: __init__.py  log_parser_test.py  retry_backoff_test.py
src/scrub_mcp/mcp/: server.py
src/scrub_mcp/modules/: __init__.py  coding_signatures.py  coding_tools.py  hygiene.py
src/scrub_mcp/optimizers/: health.py  tune.py
src/scrub_mcp/tools/: cache.py  complexity.py  diff.py  fs.py  imports.py  linter.py  parser.py  rewriter.py  sarif.py  savings.py  sbom.py
